made kahuna full bleed. still bugs at 710 px. used jquery

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -354,6 +354,8 @@ footer#site-footer{
         content: "";
         position: absolute;
       }
+
+      
     }
 
     &.city {
@@ -1055,9 +1057,6 @@ header#site-header {
 
 @media(max-width:710px) {
 
-
-
-  
   section.category {
     margin: 0 auto;
     width: 460px;
@@ -1081,9 +1080,10 @@ header#site-header {
     }
     &.story-kahuna{
       width: 100%;
+      height: auto;
+      margin-top: 50px;
       h1 {
         font-size: 2.5em;
-        
       }
     }
     &.story-breaking{
@@ -1380,12 +1380,12 @@ section.category {
 
     &.story-kahuna{
       width: 100%;
-      height: $card-height;
+
       background-color: white;
       .card-image {
         display: block;
         width: 100%;
-        height: 100%;
+        height: auto;
       }
 
       h1 {
